Changes and added lines

--- a/index.html
+++ b/index.html
@@ -481,6 +481,10 @@
         .favorites-section img:hover {
             transform: scale(1.05);
         }
+        .favorites-section a {
+            color: #FFD700;
+            text-decoration: none;
+        }
         #current-date {
             font-size: 1.8em;
         }
@@ -502,6 +506,9 @@
         <h2>About Me</h2>
         <img src="video-game-combatant.jpg" alt="Profile Picture">
         <p>I want to change the world knowing that I have enough knowledge to prove myself I am always following my dreams.</p>
+        <p>I entered EVIT (East Valley Institute of Technology) in July 24th 2024 to follow my dreams and get the most out of certifications.</p>
+        <p>I am currently 17 years old.</p>
+        <img src="jonathan-guardado-agredano.jpg" alt="Photo of Me at My Current Age">
     </section>
     <section id="skills-section" class="skills-section">
         <h2>My Skills</h2>
@@ -525,10 +532,18 @@
     <section id="favorites-section" class="favorites-section">
         <h2>My Favorites</h2>
         <ul>
-            <li>Favorite Hobby: Sing</li>
+            <li>Favorite Hobby: Sing and listen to songs</li>
             <li>Favorite Place: The Beach</li>
             <li>Favorite Food: Cheeseburger</li>
             <li>Best Memory: Going to Mexico to visit my mom and my two brothers</li>
+            <li>Favorite artists: Kesha, Jessie J, Katy Perry, Selena Gomez, Britney Spears, Miley Cyrus and Clean Bandit</li>
+            <li>Favorite bands: Metallica, Aerosmith and Ghost</li>
+            <li>Favorite songs: Rather Be by Clean Bandit, Fireworks by Katy Perry, Flowers by Miley Cyrus, Baby One More Time by Britney Spears and Flashlight by Jessie J</li>
+            <li><a href="https://open.spotify.com/track/61dCUoMCg28qEBzrW6htYM" target="_blank">Rather Be by Clean Bandit on Spotify</a></li>
+            <li><a href="https://open.spotify.com/track/4lCv7b86sLynZbXhfScfm2" target="_blank">Fireworks by Katy Perry on Spotify</a></li>
+            <li><a href="https://open.spotify.com/track/7DSAEUvxU8FajXtRloy8M0" target="_blank">Flowers by Miley Cyrus on Spotify</a></li>
+            <li><a href="https://open.spotify.com/track/3MjUtNVVq3C8Fn0MP3zhXa" target="_blank">Baby One More Time by Britney Spears on Spotify</a></li>
+            <li><a href="https://open.spotify.com/track/6SkoBaMd0lzoQjID5aV2d9" target="_blank">Flashlight by Jessie J on Spotify</a></li>
         </ul>
         <img src="jonathan-and-joan-2024.jpg" alt="Best Memory Photo">
     </section>
