Change of images

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     </section>
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
-        <img src="video-game-combatant.jpg" alt="Profile Picture">
+        <img src="pizza-soldier-lol.jpg" alt="Profile Picture">
         <p>I want to change the world knowing that I have enough knowledge to prove myself I am always following my dreams.</p>
         <p>I entered EVIT (East Valley Institute of Technology) in July 24th 2024 to follow my dreams and get the most out of certifications.</p>
         <p>I am currently 17 years old.</p>
