--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-tile">
-            <a href="file:///C:/Users/jguar312/Downloads/photo-1560177776-55a762c5c000.jpg" target="_blank" class="btn">Project 1</a>
+            <a href="JGresume.pdf" target="_blank" class="btn">Project 1</a>
         </div>
     </section>
     <section id="social-media" class="social-media">
