--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         body {
             margin: 0;
             font-family: Arial, "Helvetica Neue", sans-serif;
-            background-color: rgb(245, 235, 220);
-            color: #e0ffff;
+            background-color: #191970;
+            color: #FFBF00;
             line-height: 1.6;
-            background: linear-gradient(to bottom, rgb(245, 235, 220), #191970);
+            background: linear-gradient(to bottom, #191970, #141452);
             overflow-x: hidden;
         }
         .navbar {
             position: fixed;
             top: 0;
             width: 100%;
-            background: linear-gradient(to right, #483d8b, #191970, #00ced1);
+            background: linear-gradient(to right, #483D8B, #191970);
             padding: 15px;
             text-align: center;
             box-shadow: 0 2px 10px rgba(72, 61, 139, 0.3);
@@ -33,7 +33,7 @@
             to { transform: translateY(0); }
         }
         .navbar a {
-            color: rgb(245, 235, 220);
+            color: #FFBF00;
             text-decoration: none;
             margin: 0 20px;
             font-size: 16px;
@@ -50,17 +50,17 @@
             height: 2px;
             bottom: 0;
             left: 0;
-            background: #00ced1;
+            background: #FFBF00;
             transition: width 0.3s ease;
         }
         .navbar a:hover::after {
             width: 100%;
         }
         .navbar a:hover {
-            color: #e0ffff;
+            color: #FFBF00;
             font-weight: bold;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-            background: rgba(0, 206, 209, 0.2);
+            background: rgba(255, 191, 0, 0.2);
             transform: translateY(-2px);
         }
         .navbar-title {
@@ -68,7 +68,7 @@
             font-weight: bold;
             margin-bottom: 10px;
             text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-            background: rgba(25, 25, 112, 0.2);
+            background: rgba(72, 61, 139, 0.2);
             padding: 5px 15px;
             border-radius: 20px;
             display: block;
@@ -78,7 +78,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(to bottom, #483d8b, #191970);
+            background: linear-gradient(to bottom, #483D8B, #191970);
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -90,7 +90,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle, rgba(245, 235, 220, 0.1), transparent);
+            background: radial-gradient(circle, rgba(255, 191, 0, 0.1), transparent);
             z-index: 1;
             animation: pulse 5s infinite;
         }
@@ -105,7 +105,7 @@
             animation: fadeIn 2s ease-in;
             position: relative;
             z-index: 2;
-            background: rgba(25, 25, 112, 0.3);
+            background: rgba(72, 61, 139, 0.3);
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
             transition: transform 0.3s ease;
@@ -123,7 +123,7 @@
             padding: 70px 20px;
             text-align: center;
             background: #191970;
-            border-top: 2px solid #00ced1;
+            border-top: 2px solid #FFBF00;
             position: relative;
         }
         .profile-section::before {
@@ -133,7 +133,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="rgba(245,235,220,0.1)"/></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="rgba(255,191,0,0.1)"/></svg>');
             opacity: 0.1;
             z-index: 0;
         }
@@ -142,19 +142,19 @@
             height: 180px;
             border-radius: 50%;
             margin-bottom: 25px;
-            border: 4px solid #00ced1;
-            box-shadow: 0 0 20px rgba(0, 206, 209, 0.5);
+            border: 4px solid #FFBF00;
+            box-shadow: 0 0 20px rgba(255, 191, 0, 0.5);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
         .profile-section img:hover {
             transform: rotate(360deg);
-            box-shadow: 0 0 30px rgba(0, 206, 209, 0.8);
+            box-shadow: 0 0 30px rgba(255, 191, 0, 0.8);
         }
         .profile-section p {
             max-width: 700px;
             margin: 0 auto;
             font-size: 1.3em;
-            background: rgba(245, 235, 220, 0.1);
+            background: rgba(255, 191, 0, 0.1);
             padding: 20px;
             border-radius: 10px;
             position: relative;
@@ -169,8 +169,8 @@
         .skills-section {
             padding: 70px 20px;
             text-align: center;
-            background: #483d8b;
-            border-top: 2px solid #00ced1;
+            background: #483D8B;
+            border-top: 2px solid #FFBF00;
         }
         .skills-section ul {
             list-style: none;
@@ -181,7 +181,7 @@
             gap: 25px;
         }
         .skills-section li {
-            background: rgb(245, 235, 220);
+            background: #FFBF00;
             color: #191970;
             padding: 12px 25px;
             border-radius: 25px;
@@ -198,7 +198,7 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: rgba(0, 206, 209, 0.2);
+            background: rgba(72, 61, 139, 0.2);
             transform: rotate(30deg);
             transition: all 0.5s ease;
             opacity: 0;
@@ -210,20 +210,20 @@
         }
         .skills-section li:hover {
             transform: translateY(-5px);
-            box-shadow: 0 6px 15px rgba(0, 206, 209, 0.5);
+            box-shadow: 0 6px 15px rgba(255, 191, 0, 0.5);
         }
         .projects {
             padding: 70px 20px;
             text-align: center;
             background: #191970;
-            border-top: 2px solid #00ced1;
+            border-top: 2px solid #FFBF00;
             position: relative;
         }
         .project-tile {
             margin: 25px auto;
             padding: 20px;
-            background: rgb(245, 235, 220);
-            color: #483d8b;
+            background: #FFBF00;
+            color: #483D8B;
             display: block;
             border-radius: 15px;
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
@@ -233,11 +233,11 @@
         }
         .project-tile:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 20px rgba(0, 206, 209, 0.5);
+            box-shadow: 0 8px 20px rgba(255, 191, 0, 0.5);
         }
         .project-tile a {
             text-decoration: none;
-            color: #483d8b;
+            color: #483D8B;
             font-weight: bold;
             position: relative;
         }
@@ -255,11 +255,11 @@
         .social-media {
             padding: 50px 20px;
             text-align: center;
-            background: #483d8b;
-            border-top: 2px solid #00ced1;
+            background: #483D8B;
+            border-top: 2px solid #FFBF00;
         }
         .social-media a {
-            color: #00ced1;
+            color: #FFBF00;
             font-size: 22px;
             margin: 0 20px;
             text-decoration: none;
@@ -267,8 +267,8 @@
             position: relative;
         }
         .social-media a:hover {
-            color: rgb(245, 235, 220);
-            text-shadow: 0 0 10px #00ced1;
+            color: #FFBF00;
+            text-shadow: 0 0 10px #191970;
             transform: scale(1.1);
         }
         .social-media iframe {
@@ -286,19 +286,19 @@
         .btn {
             display: inline-block;
             padding: 15px 30px;
-            background: linear-gradient(45deg, #00ced1, #483d8b);
-            color: rgb(245, 235, 220);
+            background: linear-gradient(45deg, #FFBF00, #483D8B);
+            color: #191970;
             text-decoration: none;
             border-radius: 12px;
             font-weight: bold;
             font-size: 1.2em;
             transition: 0.3s ease, box-shadow 0.3s ease, transform 0.3s ease;
-            box-shadow: 0 4px 12px rgba(0, 206, 209, 0.7);
+            box-shadow: 0 4px 12px rgba(255, 191, 0, 0.7);
             position: relative;
             overflow: hidden;
             margin: 10px;
             text-transform: uppercase;
-            border: 2px solid #00ced1;
+            border: 2px solid #FFBF00;
         }
         .btn::before {
             content: '';
@@ -307,7 +307,7 @@
             left: 50%;
             width: 0;
             height: 0;
-            background: rgba(245, 235, 220, 0.4);
+            background: rgba(25, 25, 112, 0.4);
             border-radius: 50%;
             transform: translate(-50%, -50%);
             transition: width 0.6s ease, height 0.6s ease;
@@ -317,9 +317,9 @@
             height: 400px;
         }
         .btn:hover {
-            background: linear-gradient(45deg, rgb(245, 235, 220), #00ced1);
-            color: #483d8b;
-            box-shadow: 0 6px 20px rgba(0, 206, 209, 0.9);
+            background: linear-gradient(45deg, #191970, #FFBF00);
+            color: #483D8B;
+            box-shadow: 0 6px 20px rgba(255, 191, 0, 0.9);
             transform: translateY(-4px) scale(1.05);
         }
         footer {
@@ -327,19 +327,19 @@
             text-align: center;
             background: #191970;
             font-size: 1em;
-            border-top: 2px solid #00ced1;
-            box-shadow: 0 -2px 10px rgba(0, 206, 209, 0.3);
+            border-top: 2px solid #FFBF00;
+            box-shadow: 0 -2px 10px rgba(255, 191, 0, 0.3);
             position: relative;
         }
         footer a {
-            color: #00ced1;
+            color: #FFBF00;
             text-decoration: none;
             margin: 0 15px;
             font-size: 1.1em;
             transition: color 0.3s ease, transform 0.3s ease;
         }
         footer a:hover {
-            color: rgb(245, 235, 220);
+            color: #FFBF00;
             transform: scale(1.1);
         }
         h2 {
@@ -353,7 +353,7 @@
             position: absolute;
             width: 50px;
             height: 3px;
-            background: #00ced1;
+            background: #FFBF00;
             bottom: -10px;
             left: 50%;
             transform: translateX(-50%);
@@ -448,8 +448,8 @@
         .favorites-section {
             padding: 70px 20px;
             text-align: center;
-            background: #483d8b;
-            border-top: 2px solid #00ced1;
+            background: #483D8B;
+            border-top: 2px solid #FFBF00;
         }
         .favorites-section ul {
             list-style: none;
@@ -461,7 +461,7 @@
         .favorites-section li {
             font-size: 1.2em;
             margin: 15px 0;
-            background: rgba(245, 235, 220, 0.1);
+            background: rgba(255, 191, 0, 0.1);
             padding: 15px;
             border-radius: 10px;
             transition: transform 0.3s ease;
@@ -474,15 +474,15 @@
             height: auto;
             border-radius: 15px;
             margin-top: 20px;
-            border: 4px solid #00ced1;
-            box-shadow: 0 0 20px rgba(0, 206, 209, 0.5);
+            border: 4px solid #FFBF00;
+            box-shadow: 0 0 20px rgba(255, 191, 0, 0.5);
             transition: transform 0.3s ease;
         }
         .favorites-section img:hover {
             transform: scale(1.05);
         }
         .favorites-section a {
-            color: #00ced1;
+            color: #FFBF00;
             text-decoration: none;
         }
         #current-date {
@@ -497,7 +497,7 @@
         <a href="#profile-section">About</a>
         <a href="#skills-section">Skills</a>
         <a href="#projects">Projects</a>
-        <a href="#social-media">Contact</a>
+        <a href="#email-me">Contact</a>
     </div>
     <section id="welcome-section" class="welcome-section">
         <h1 id="current-date"></h1>
@@ -551,7 +551,7 @@
     <footer>
         <p>© 2025 Jonathan Guardado Agredano. All rights reserved.</p>
         <a href="#welcome-section">Back to Top</a>
-        <a href="mailto:jaguar220807@gmail.com">Email Me</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jaguar220807@gmail.com" target="_blank" id="email-me">Email Me</a>
     </footer>
     <script>
         function updateDate() {
