--- a/index.html
+++ b/index.html
@@ -488,9 +488,45 @@
         #current-date {
             font-size: 1.8em;
         }
+        .loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #191970;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 2000;
+            transition: opacity 0.5s ease;
+        }
+        .loader.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+        .spinner {
+            font-size: 60px;
+            color: #FFBF00;
+            animation: spin 1s linear infinite;
+            margin-bottom: 20px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .loader-text {
+            font-size: 1.5em;
+            color: #FFBF00;
+        }
     </style>
 </head>
 <body>
+    <div class="loader">
+        <div class="spinner" id="random-emoji"></div>
+        <div class="loader-text" id="loader-greeting"></div>
+    </div>
     <div class="navbar">
         <div class="navbar-title">Jonathan Guardado Agredano's Website</div>
         <a href="#welcome-section">Home</a>
@@ -570,6 +606,35 @@
         }
         setInterval(updateDate, 1000);
         updateDate();
+
+        const emojis = ['🎵', '🌟', '🚀', '🍔', '🌊', '🎸', '✨', '🎤', '🏖️', '🔥'];
+        const randomEmoji = emojis[Math.floor(Math.random() * emojis.length)];
+        document.getElementById('random-emoji').textContent = randomEmoji;
+
+        const wordsOfTheDay = [
+            'Hope', 'Dream', 'Inspire', 'Create', 'Explore', 'Joy', 'Peace', 'Love', 
+            'Courage', 'Wisdom', 'Strength', 'Imagine', 'Grow', 'Shine', 'Believe'
+        ];
+        const today = new Date();
+        const dayOfYear = Math.floor((today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24);
+        const wordIndex = dayOfYear % wordsOfTheDay.length;
+        const wordOfTheDay = wordsOfTheDay[wordIndex];
+
+        let username = null;
+        while (!username) {
+            username = prompt("Please enter your username:");
+            if (!username) {
+                alert("Error: You need to enter your name!");
+            }
+        }
+        document.getElementById('loader-greeting').textContent = `Hi there, ${username}! Word of the Day: ${wordOfTheDay}`;
+        
+        window.addEventListener('load', function() {
+            const loader = document.querySelector('.loader');
+            setTimeout(() => {
+                loader.classList.add('hidden');
+            }, 4000);
+        });
     </script>
 </body>
 </html>
