--- a/index.html
+++ b/index.html
@@ -521,6 +521,30 @@
             font-size: 1.5em;
             color: #FFBF00;
         }
+        .madeline-section {
+            padding: 70px 20px;
+            text-align: center;
+            background: #191970;
+            border-top: 2px solid #FFBF00;
+            position: relative;
+        }
+        .madeline-section img {
+            width: 300px;
+            height: auto;
+            border-radius: 15px;
+            margin-top: 20px;
+            border: 4px solid #FFBF00;
+            box-shadow: 0 0 20px rgba(255, 191, 0, 0.5);
+            transition: transform 0.3s ease;
+        }
+        .madeline-section img:hover {
+            transform: scale(1.05);
+        }
+        @media (max-width: 480px) {
+            .madeline-section img {
+                width: 200px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -585,6 +609,10 @@
             <li><a href="https://open.spotify.com/track/6SkoBaMd0lzoQjID5aV2d9" target="_blank">Flashlight by Jessie J on Spotify</a></li>
         </ul>
         <img src="jonathan-and-joan-2024.jpg" alt="Best Memory Photo">
+    </section>
+    <section id="madeline-placeholder" class="madeline-section">
+        <h2>Madeline from Celeste</h2>
+        <img src="madeline-celeste.jpg" alt="Madeline from Celeste Placeholder">
     </section>
     <footer>
         <p>© 2025 Jonathan Guardado Agredano. All rights reserved.</p>
