--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
     </section>
     <section id="profile-section" class="profile-section">
         <h2>About Me</h2>
-        <img src="pizza-soldier-lol.jpg" alt="Profile Picture">
+        <img src="jonathan.jpg" alt="Profile Picture">
         <p>I want to change the world knowing that I have enough knowledge to prove myself I am always following my dreams.</p>
         <p>I entered EVIT (East Valley Institute of Technology) in July 24th 2024 to follow my dreams and get the most out of certifications.</p>
         <p>I am currently 17 years old.</p>
@@ -973,9 +973,8 @@
             <li><a href="https://open.spotify.com/track/6SkoBaMd0lzoQjID5aV2d9" target="_blank">Flashlight by Jessie J on Spotify</a></li>
         </ul>
         <img src="jonathan-and-joan-2024.jpg" alt="Best Memory Photo">
-        <img src="singing-placeholder.jpg" alt="Photo">
-        <img src="beach-placeholder.jpg" alt="Photo">
-        <img src="cheeseburger-placeholder.jpg" alt="Photo">
+        <img src="joan-2025.jpg" alt="My Brother">
+        <img src="joan-2025.01.jpg" alt="My Brother 2.0">
         <div class="floating-decor circle" style="top: 10%; left: 10%;"></div>
         <div class="floating-decor star" style="bottom: 15%; right: 15%;"></div>
     </section>
@@ -1161,19 +1160,23 @@
         });
 
         function showRandomHello() {
-            const helloDiv = document.createElement('div');
-            helloDiv.className = 'random-hello';
-            helloDiv.textContent = 'Hello!';
-            const maxX = window.innerWidth - 100;
-            const maxY = window.innerHeight - 50;
-            const randomX = Math.random() * (80 - 10) + 10;
-            const randomY = Math.random() * (80 - 10) + 10;
-            helloDiv.style.left = `${randomX}%`;
-            helloDiv.style.top = `${randomY}%`;
-            document.body.appendChild(helloDiv);
-            setTimeout(() => {
-                helloDiv.remove();
-            }, 3000);
+            const welcomeSection = document.getElementById('welcome-section');
+            const rect = welcomeSection.getBoundingClientRect();
+            if (rect.top >= 0 && rect.bottom <= window.innerHeight) {
+                const helloDiv = document.createElement('div');
+                helloDiv.className = 'random-hello';
+                helloDiv.textContent = 'Hello!';
+                const maxX = welcomeSection.offsetWidth - 100;
+                const maxY = welcomeSection.offsetHeight - 50;
+                const randomX = Math.random() * (80 - 10) + 10;
+                const randomY = Math.random() * (80 - 10) + 10;
+                helloDiv.style.left = `${randomX}%`;
+                helloDiv.style.top = `${randomY}%`;
+                welcomeSection.appendChild(helloDiv);
+                setTimeout(() => {
+                    helloDiv.remove();
+                }, 3000);
+            }
         }
         setInterval(showRandomHello, 3000);
         showRandomHello();
