--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
             if (rect.top >= 0 && rect.bottom <= window.innerHeight) {
                 const helloDiv = document.createElement('div');
                 helloDiv.className = 'random-hello';
-                helloDiv.textContent = 'Hello!';
+                helloDiv.textContent = `Hello, ${username}!`;
                 const maxX = welcomeSection.offsetWidth - 100;
                 const maxY = welcomeSection.offsetHeight - 50;
                 const randomX = Math.random() * (80 - 10) + 10;
