--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             h2 {
                 font-size: 2em;
             }
-            .themeabba .theme-toggle {
+            .theme-toggle {
                 top: 150px;
             }
             .social-media .social-icon {
@@ -822,6 +822,55 @@
                 width: 45px;
                 height: 45px;
                 font-size: 24px;
+            }
+        }
+        @media (min-width: 1200px) {
+            .navbar a {
+                font-size: 18px;
+                margin: 0 30px;
+            }
+            .navbar-title {
+                font-size: 24px;
+            }
+            .welcome-section h1 {
+                font-size: 3em;
+                padding: 40px;
+            }
+            .welcome-section h2 {
+                font-size: 2em;
+            }
+            .profile-section img {
+                width: 200px;
+                height: 200px;
+            }
+            .profile-section p {
+                font-size: 1.5em;
+                max-width: 800px;
+            }
+            .skills-section ul {
+                gap: 30px;
+            }
+            .skills-section li {
+                font-size: 1.2em;
+                padding: 15px 30px;
+            }
+            .project-tile {
+                max-width: 600px;
+            }
+            .social-media .social-icon {
+                width: 70px;
+                height: 70px;
+                font-size: 36px;
+            }
+            .btn {
+                font-size: 1.4em;
+                padding: 20px 40px;
+            }
+            h2 {
+                font-size: 3em;
+            }
+            .favorites-section img {
+                width: 400px;
             }
         }
         .favorites-section {
